Add AlbumList page
Show the album cover images of the first page
on website in a list page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="confirm">確認</string>
     <string name="hint_enter_user_name">請輸入帳號</string>
     <string name="hint_enter_album_id">請輸入相簿id</string>
+    <string name="default_user_name">david520lisa</string>
+    <string name="default_album_id">9194202</string>
 
 </resources>
