--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hint_enter_album_id">請輸入相簿id</string>
     <string name="default_user_name">david520lisa</string>
     <string name="default_album_id">9194202</string>
+    <string name="previous_page">上一頁</string>
+    <string name="next_page">下一頁</string>
+
 
 </resources>
