--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
+
     <string name="app_name">YamViewer</string>
     <string name="confirm">確認</string>
+    <string name="clear">清除</string>
     <string name="hint_enter_user_name">請輸入帳號</string>
     <string name="hint_enter_album_id">請輸入相簿id</string>
     <string name="default_user_name">david520lisa</string>
     <string name="default_album_id">9194202</string>
     <string name="previous_page">上一頁</string>
     <string name="next_page">下一頁</string>
-
+    <string name="no_photo_description">無照片描述</string>
+    <string name="no_album_description">無相簿描述</string>
+    <string name="photos_quantity">%1$d張照片</string>
+    <string name="already_first_page">已經在第1頁</string>
+    <string name="already_last_page">已在最後一頁(%1$d)</string>
 
 </resources>
