--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="default_album_id">9194202</string>
     <string name="previous_page">上一頁</string>
     <string name="next_page">下一頁</string>
+    <string name="page_number">第%1$d頁</string>
     <string name="no_photo_description">無照片描述</string>
     <string name="no_album_description">無相簿描述</string>
     <string name="photos_quantity">%1$d張照片</string>
