Drop Down Auto-Complete List When Click
Drop down the auto-complete list view when
the user name input edit text is clicked.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="open_albums">公開</string>
     <string name="all_albums">所有</string>
     <string name="locked_album_prefix">(鎖)\ </string>
+    <string name="pop_user_name">常用帳號</string>
 
 </resources>
