--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="locked_album_prefix">(鎖)\ </string>
     <string name="pop_user_name">常用帳號</string>
     <string name="search_history_list">瀏覽紀錄</string>
+    <string name="pchome_button">PChome相簿</string>
 
 </resources>
